--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<ul id="band"></ul>
+	<ul id="band">
+		
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
